--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Hello World!</title>
 </head>
@@ -12,19 +13,16 @@
         <header class="header"></header>
         <div class="menu">
             <div class="menu-action">
-                <img src="icons/vk.svg" alt="" class="menu-img">
+                <i class="fas fa-bars"></i>
             </div>
             <div class="menu-item">
-                <img src="icons/envelope.svg" alt="" class="menu-img">
+                <i class="fas fa-cog"></i>
             </div>
             <div class="menu-item">
-                <img src="icons/university.svg" alt="" class="menu-img">
+                <i class="fas fa-newspaper"></i>
             </div>
             <div class="menu-item">
-                <img src="icons/telegram-logo.svg" alt="" class="menu-img">
-            </div>
-            <div class="menu-item">
-                <img src="icons/favorites.svg" alt="" class="menu-img">
+                <i class="fas fa-sign-out-alt"></i>
             </div>
         </div>
         <div class="content"></div>
