Add: icon's active style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="menu-item">
                 <i class="fas fa-cog"></i>
             </div>
-            <div class="menu-item">
+            <div class="menu-item menu-item--active">
                 <i class="fas fa-newspaper"></i>
             </div>
             <div class="menu-item">
