--- a/settings.html
+++ b/settings.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>de1ay's blog - articles</title>
+    <title>de1ay's blog - settings</title>
 </head>
 <body>
     <div class="container">
@@ -15,10 +15,10 @@
             <div class="menu-action">
                 <i class="fas fa-bars"></i>
             </div>
-            <a class="menu-item" href="settings.html">
+            <a class="menu-item menu-item--active" href="settings.html">
                 <i class="fas fa-cog"></i>
             </a>
-            <a class="menu-item menu-item--active" href="index.html">
+            <a class="menu-item" href="index.html">
                 <i class="fas fa-newspaper"></i>
             </a>
             <div class="menu-item">
