Add: article and editor pages

--- a/settings.html
+++ b/settings.html
@@ -16,6 +16,9 @@
             <div class="menu-action">
                 <i class="fas fa-bars"></i>
             </div>
+            <a class="menu-item" href="editor.html">
+              <i class="fas fa-pen"></i>
+            </a> 
             <a class="menu-item menu-item--active" href="settings.html">
                 <i class="fas fa-cog"></i>
             </a>
