--- a/editor.html
+++ b/editor.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/index.css">
-    <title>de1ay's blog - articles</title>
+    <link rel="stylesheet" href="css/editor.css">
+    <title>de1ay's blog - editor</title>
 </head>
 <body>
     <div class="container">
@@ -16,13 +16,13 @@
             <div class="menu-action">
                 <i class="fas fa-bars"></i>
             </div>
-            <a class="menu-item" href="editor.html">
+            <a class="menu-item menu-item--active" href="editor.html">
               <i class="fas fa-pen"></i>
             </a> 
             <a class="menu-item" href="settings.html">
                 <i class="fas fa-cog"></i>
             </a>
-            <a class="menu-item menu-item--active" href="index.html">
+            <a class="menu-item" href="index.html">
                 <i class="fas fa-newspaper"></i>
             </a>
             <div class="menu-item">
