--- a/index.html
+++ b/index.html
@@ -29,7 +29,42 @@
                 <i class="fas fa-sign-out-alt"></i>
             </div>
         </div>
-        <div class="content"></div>
+        <div class="content">
+            <div class="index">
+                <div class="card">
+                    <div class="card-img">
+                        <img src="https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1066&q=80" alt="">
+                    </div>
+                    <div class="card-header">
+                        <p>Как выучить C++?</p>
+                    </div>
+                </div>
+                <div class="card">
+                        <div class="card-img">
+                            <img src="https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1066&q=80" alt="">
+                        </div>
+                        <div class="card-header">
+                            <p>Как выучить C++?</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                            <div class="card-img">
+                                <img src="https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1066&q=80" alt="">
+                            </div>
+                            <div class="card-header">
+                                <p>Как выучить C++?</p>
+                            </div>
+                        </div>
+                <div class="card">
+                        <div class="card-img">
+                            <img src="https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1066&q=80" alt="">
+                        </div>
+                        <div class="card-header">
+                            <p>Как выучить C++?</p>
+                        </div>
+                    </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
