--- a/index.html
+++ b/index.html
@@ -32,37 +32,49 @@
         <div class="content">
             <div class="index">
                 <div class="card">
-                    <div class="card-img">
-                        <img src="https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1066&q=80" alt="">
-                    </div>
                     <div class="card-header">
-                        <p>Как выучить C++?</p>
+                        <div class="card-img">
+                            <img src="https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1066&q=80" alt="">
+                        </div>
+                        <span>Введение в JavaScript</span>
+                    </div>
+                    <div class="card-body">
+                        <span class="card-body__text">Современный JavaScript – это «безопасный» язык программирования общего назначения. Он не предоставляет низкоуров...</span>
                     </div>
                 </div>
                 <div class="card">
+                    <div class="card-header">
                         <div class="card-img">
                             <img src="https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1066&q=80" alt="">
                         </div>
-                        <div class="card-header">
-                            <p>Как выучить C++?</p>
-                        </div>
+                        <span>Введение в JavaScript</span>
                     </div>
-                    <div class="card">
-                            <div class="card-img">
-                                <img src="https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1066&q=80" alt="">
-                            </div>
-                            <div class="card-header">
-                                <p>Как выучить C++?</p>
-                            </div>
-                        </div>
+                    <div class="card-body">
+                        <span class="card-body__text">Современный JavaScript – это «безопасный» язык программирования общего назначения. Он не предоставляет низкоуров...</span>
+                    </div>
+                </div>
                 <div class="card">
+                    <div class="card-header">
                         <div class="card-img">
                             <img src="https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1066&q=80" alt="">
                         </div>
-                        <div class="card-header">
-                            <p>Как выучить C++?</p>
-                        </div>
+                        <span>Введение в JavaScript</span>
                     </div>
+                    <div class="card-body">
+                        <span class="card-body__text">Современный JavaScript – это «безопасный» язык программирования общего назначения. Он не предоставляет низкоуров...</span>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="card-header">
+                        <div class="card-img">
+                            <img src="https://images.unsplash.com/photo-1516259762381-22954d7d3ad2?ixlib=rb-1.2.1&auto=format&fit=crop&w=1066&q=80" alt="">
+                        </div>
+                        <span>Введение в JavaScript</span>
+                    </div>
+                    <div class="card-body">
+                        <span class="card-body__text">Современный JavaScript – это «безопасный» язык программирования общего назначения. Он не предоставляет низкоуров...</span>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
